@@ -1,6 +1,8 @@
 AUX mesa-19.3.0-add-disable-tls-support.patch 1230 BLAKE2B 3a30e7559d36b4e760002b41cf5063a9d70a2f4d1bb319a569d3ee272a0be164df6ece5acf4bd68ebbe20d2ecc805cb851ea411e6124030d481104b3511ab7d8 SHA512 9c5fcfc2e317ecd1ab1ef1b6e46fa1a1d8d179206e9efb3742ac57a97d8c5de9aa5ce7c80d629f78f99744cacb99944b3ae5e9520cbffeca8849956750ca0003
 AUX mesa-20.0.4-meson-Specify-the-maximum-required-libdrm-in-dri.pc.patch 1179 BLAKE2B def1a82b31efd5a8aba5bc4869e296ddfa8f54698ba991e8327f3cb6b203cc5af8dd6faab7d43a650c7f0ced27131a58fac743b49452bbeabbb173cbdd65f7f4 SHA512 31ffed8ef5412fdbc478d327f8e6620ef0160628188457ba7934175a732432b6a8b05b91fd8f0bd63575ed219502af874178f9a464d254c3a3a5dc4b74f8680a
 DIST mesa-20.0.8.tar.xz 12360736 BLAKE2B 19e3f8a40b34b5f17ed76077c5d92f728a134b2479c43d86674ed1818ab99639a9b732041f67488251df808564f6abe5b587d756ef9c7c13dcada87cd0fc05de SHA512 d906330c412899907dd05a84034a929107fccaf3044814c4b1f30ba5690cbcf1587b5f17534c6345111f3cb7cf292afd5984a60486643ff6f534b57cec615374
+DIST mesa-20.2.0.tar.xz 13675596 BLAKE2B d1c6b4ac631446a35eb916d0b2ddbe2a8d75429268b1598b35f5776953b560ac08917bde07e32cf4ca33aa4e6a2713d46dc6de86d717127fbb950f0de2aa6325 SHA512 3dd7def04ba4f196be8fd59999285febb10366e89d6e649c518b436b732c62d3f1bd235fc470de7fda4b4cc09a1baaadca4222dcdc2449225d789b151cea69d7
 EBUILD mesa-20.0.8-r1.ebuild 15983 BLAKE2B e0e1c7ca70f4dbc82a0782a9e1ec64c714b0f08108a344e68d6b7c720447d5f179f2c35cb6fcdf6b6b155ec12f775de8edefddbc6a9077ea68488a1646a0b4f6 SHA512 3f8c8687ddb5641b6a5b2d02784f3371f27f25c60767bb96ebeafbf6a1eaf5ecdcf3ed570e22ae5a89211e04b8a3db3c60cee1d330a6895377400990e02653d9
-MISC ChangeLog 212 BLAKE2B f0d95383c5b5086498fceea12aa98321e01f7f794b2a8e731b18a4e9e89ae0b8e7d2386442107ad333791637491ba1228fa7fe6f8f3d1b4730629168784244d0 SHA512 ad2314431e7d0aef1eb5f23f12588f8f80e194616369ca7daddb31a04d29139903e83c8335d1725fd6ce028ab566053493472fc93540a24fa4ee05f369ad0927
+EBUILD mesa-20.2.0.ebuild 15730 BLAKE2B ea5c01f44625362c245257f1d3e2ea1fb12d595fdb9049a42a9d790d60bb20b75d0791d984dd63994b9df769596dc5e121fecbd68969bbb9bca304a160d64119 SHA512 45502c82a5629c989ac7f790dedd27a842faee146b5218579e0f17c963467e62d6d01eae67de3b0cecf9ec0005aea67318e8dd9fbbf9fbcfe41590bd63070fb1
+MISC ChangeLog 391 BLAKE2B f65e485d920eea316adb889722cb4d37d2bc4014590f8e8269c76c0d43a02d4e916f998b91d2178f6ea3819083f0363e3b6492506bc7e297149700a884635967 SHA512 11baa3b23ab5b7ca75bab2047b8b20a0e55cce2c972a2a5837fc43f44af65ce78068b49568e67261162dd8848110c232d4538751011ada200e6da944d041e903
 MISC metadata.xml 2533 BLAKE2B 891e5417f73a82445573440e8ab813a1eb9c72966753e23baa53227d19422ff77d758c5f3078772ce6a1f082e3add9f7ee41dbe9973678009d463d287aac406b SHA512 50f9dbbcd6e08911583e2fd5949ef3ae7cc368f9dfdd92f2bba6437d2d5a250a8d696dc2bbc47bed2cb283eabf2ac3b00808870f5415a028f32ac2013a8b8015
